--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,3 +1,5 @@
-<p>
-  list works!
-</p>
+<ul>
+  <li *ngFor="let item of items">
+    {{item.id}}: {{item.name}} lives in {{item.country}}
+  </li>  
+</ul>
